--- a/style.css
+++ b/style.css
@@ -138,6 +138,31 @@ p {
 
 
 
+/* ===== SWIPPER ===== */
+.carousel {
+    background-color: #FF8F2A;
+}
+
+.swiper {
+    /* width: 600px; */
+    height: 300px;
+    background-color: #00DEA5;
+}
+
+.swiper-wrapper {
+    background-color: #343434;
+}
+
+.swiper-slide {
+    color: red;
+    width: 200px;
+}
+
+.swiper-button-prev {
+    color: red;
+}
+
+
 /* ===== FOOTER ===== */
 footer {
     background-color: var(--clr-black-header);
