--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 body {
     /* min-height: 100vh; */
     text-rendering: optimizeSpeed;
-    /* line-height: 1.3; */
+    line-height: 1.3;
 }
 
 /* A elements that don't have a class get default styles */
@@ -119,8 +119,14 @@ select {
     padding-inline: 15px;
 }
 
+h1, h2 {
+    color: var(--clr-black-header);
+}
+
 p {
     font-family: var(--ff-sec-body);
+    font-size: var(--fs-m-body);
+    color: var(--clr-black-body);
 }
 
 .title {
@@ -136,6 +142,11 @@ p {
 }
 
 .header {
+    font-size: 40px;
+    font-family: var(--ff-pry-header);
+}
+
+.body-header {
     font-size: 30px;
     font-family: var(--ff-pry-header);
 }
@@ -214,48 +225,35 @@ body {
 }
 
 /* bottom */
-
-
-#abt-h>h1 {
-    font-family: var(--ff-pry-header);
-    color: var(--clr-black-header);
+#about .header-group {
+    margin-bottom: 1rem;
 }
 
-#abt-h>h3 {
-    font-family: var(--fs-m-subheader);
-    color: var(--clr-black-header);
+#about .bottom p {
+    margin-bottom: 12px;
 }
 
-#abt-h>h3>span {
-    font-family: var(--fs-m-subheader);
-    color: var(--clr-pry-green);
+#about .bottom .checkbox-group {
+    margin-block: 1.2rem;
 }
 
-#abt-bdy {
-    font-family: var(--ff-sec-body);
-    font-size: var(--fs-body);
+#about .bottom .checkbox-group li {
+    margin-bottom: 6px;
+    /* display: flex; */
+    align-items: center;
 }
 
-
-#blt-pnt {
-    display: flex;
-    justify-content: flex-start;
-    float: left;
-    padding-top: 10%;
-    padding-left: 5%;
-    font-family: var(--ff-tertiary-subhead);
-    font-weight: bold;
+#about .bottom ul {
+    list-style-type: none;
 }
 
-#blt-pnt1 {
-    display: flex;
-    float: left;
-    padding-left: 10%;
-    padding-top: 10%;
-    font-family: var(--ff-tertiary-subhead);
-    font-weight: bold;
+#about .bottom li::before {
+    content: url(./images/icon-checkmark.svg);
+    position: relative;
+    top: 4px;
+    padding-right: 7px;
+    /* transform: translateY(10px); */
 }
-
 
 /* about section end */
 
