--- a/style.css
+++ b/style.css
@@ -157,12 +157,17 @@ p {
 .body-header {
     font-size: var(--fs-m-bd-header);
     font-family: var(--ff-pry-header);
+    line-height: 1.1;
 }
 
 .subheader {
     font-size: 22px;
     font-family: var(--ff-tertiary-subhead);
     font-weight: 700;
+}
+
+.header-group {
+    margin-bottom: .7rem;
 }
 
 .green-text {
@@ -285,10 +290,6 @@ p {
 }
 
 /* bottom */
-#about .header-group {
-    margin-bottom: 1rem;
-}
-
 #about .bottom p {
     margin-bottom: 12px;
 }
@@ -372,12 +373,76 @@ p {
     #about .bottom .checkbox-group {
         display: flex;
         gap: 3rem;
+        padding-bottom: 0;
     }
 
-
+    #about .bottom .checkbox-group li {
+        margin-bottom: 10px;
+    }
 }
 
 /* about section end */
+
+
+
+/* ===== VOLUNTEER SECTON ===== */
+.volunteer {
+    position: relative;
+}
+
+.volunteer-bg {
+    background-image: url(./images/volunteers.jpg);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-position: left center;
+    z-index: -1;
+}
+
+.volunteer-pattern-layer {
+    background-image: url(./images/pattern.png);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-position: left center;
+    z-index: 0;
+}
+
+.volunteer .container {
+    padding-block: 2rem;
+}
+
+.volunteer .apply {
+    align-items: center;
+    gap: 2rem;
+}
+
+.volunteer .apply .top {
+    width: 100%;
+}
+
+.volunteer .apply .bottom {
+    background-image: url(./images/shape-3-cut.png);
+    border-radius: var(--bdr-radius);
+    border: 1px solid #D8D8D8;
+    box-shadow: 0 0 10 0 rgb(0 0 0 / 1);
+    color: #00DEA5;
+    padding: 1rem;
+}
+
+.volunteer .apply .bottom .apply-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #D8D8D8;
+}
+
 
 
 
