--- a/style.css
+++ b/style.css
@@ -521,7 +521,8 @@ button:hover {
 }
 
 .swiper {
-    height: 270px;
+    /* min-height: 270px; */
+    /* height: 270px; */
 }
 
 .swiper-button-prev,
@@ -550,9 +551,9 @@ button:hover {
 
 
 @media (min-width: 500px) {
-    .swiper {
+    /* .swiper {
         height: 250px;
-    }
+    } */
 
     .swiper-button-prev,
     .swiper-button-next {
@@ -566,23 +567,29 @@ button:hover {
 
 .swiper-slide {
     transition: all 200ms;
+    /* min-width: 400px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .swiper-slide img {
-    width: 120px;
+    min-width: 120px;
     height: 120px;
     border-radius: 50%;
-    /* margin: 0 1rem; */
+    margin: 0 auto;
     transition: .3s;
 }
 
 .swiper-slide .label {
-    margin-top: 1rem;
+    width: 130%;
+    margin-top: 2rem;
     text-align: center;
     transition: .3s;
     /* transition-delay: 150ms; */
     scale: 0;
-    /* position: absolute; */
+    position: relative;
+    z-index: 2;
 }
 
 .swiper-slide p:nth-child(1) {
@@ -591,6 +598,7 @@ button:hover {
 
 .swiper-slide-active {
     /* margin-inline: 50px !important; */
+    /* overflow: visible !important; */
 }
 
 .swiper-slide-active img {
