--- a/style.css
+++ b/style.css
@@ -311,57 +311,60 @@ button:hover {
 
 .hero-right-text p {
     line-height: 1.5;
-    margin-bottom: 25px;
     color: var(--clr-white);
+    max-width: 80%;
+    margin: 0 auto;
 }
 
-.hero-right-text button{
-    background-color: var(--clr-pry-green);
-    color: var(--clr-white);
-    padding: .7rem 1.3rem;
-    font-weight: 600;
-    font-size: 1rem;
-    width: 150px;
-    border: 2px solid var(--clr-pry-green);
-    border-radius: 50vw;
-    cursor: pointer;
-    transition: all 100ms ease-in-out;
+.hero-right-text button {
+    margin-top: 2rem;
+}
+
+@media (max-width: 1150px) {
+    .header {
+        font-size: 70px;
+    }
 }
   
 @media (max-width: 900px) {
-    #hero{
+    /* #hero{
         margin-bottom: -350px;
-    }
+    } */
 
-    .hero-bg{    
+    .hero-bg {    
         background-position: 30% 70%;
-        
     }
 
-    .hero-flex{
-        display: block;
+    .hero-flex {
+        flex-direction: column-reverse;
+        gap: 5rem;
     }
 
-    .hero-left-text{
+    .hero-left-text {
         width: 100%;
-        margin-top: 420px;    
+        /* margin-top: 420px;     */
     }
 
-    .hero-left-text h3{
+    /* .hero-left-text h3{
         font-size: 10px;
-    }
+    } */
 
     .hero-right-text{
-        margin-top: -500px;
+        /* margin-top: -500px; */
         width: 100%;
     }
 
     .hero-right-text h1{
-        font-size: 28px;
+        font-size: var(--fs-m-hero-header);
     }
 
-    .hero-right-text p{
-        font-size: 14px;
+    .hero-right-text p {
+        max-width: 100%;
+        margin: unset;
+    }
+
+    .hero-right-text button {
+        margin-top: 1rem;
     }
     
     #hero .hero-flex ul li{
@@ -369,14 +372,14 @@ button:hover {
         margin-bottom:15px;
         display: flex;
         align-items: center;
-        font-size: 10px;
+        font-size: var(--fs-body);
         color: var(--clr-white);
     }
 
     #hero .hero-flex ul li img{
         margin-right: 10px;
-        width: auto;
-        height: 15px;
+        width: 30px;
+        height: auto;
     }
 }
   /* HERO END */
