--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ button:hover {
 
 .hero-right-text button {
     margin-top: 2rem;
+    min-width: 155px;
 }
 
 @media (max-width: 1150px) {
@@ -330,10 +331,11 @@ button:hover {
         font-size: 70px;
     }
 }
+
   
 @media (max-width: 900px) {
-    /* #hero{
-        margin-bottom: -350px;
+    /* #hero {
+        height: fit-content;
     } */
 
     .hero-bg {    
@@ -342,25 +344,29 @@ button:hover {
 
     .hero-flex {
         flex-direction: column-reverse;
-        gap: 5rem;
+        gap: 4rem;
     }
 
     .hero-left-text {
         width: 100%;
-        /* margin-top: 420px;     */
     }
 
-    /* .hero-left-text h3{
-        font-size: 10px;
-    } */
+    .hero-left-text .subheader {
+        color: var(--clr-white);
+        margin-bottom: .8rem;
+        max-width: unset;
+    }
 
-    .hero-right-text{
-        /* margin-top: -500px; */
+    .hero-right-text {
         width: 100%;
     }
 
-    .hero-right-text h1{
+    .hero-right-text .header {
         font-size: var(--fs-m-hero-header);
+    }
+
+    .hero-right-text .subheader {
+        margin-block: .5rem;
     }
 
     .hero-right-text p {
@@ -372,7 +378,7 @@ button:hover {
         margin-top: 1rem;
     }
     
-    #hero .hero-flex ul li{
+    #hero .hero-flex ul li {
         list-style: none;
         margin-bottom:15px;
         display: flex;
@@ -381,10 +387,72 @@ button:hover {
         color: var(--clr-white);
     }
 
-    #hero .hero-flex ul li img{
+    #hero .hero-flex ul li img {
         margin-right: 10px;
         width: 30px;
         height: auto;
+    }
+}
+
+
+@media (max-width: 450px) {
+    #hero {
+        height: unset;
+        display: block;
+    }
+
+    /* .hero-bg {
+        background-position: unset;
+        height: ;
+    } */
+
+    .hero-flex {
+        gap: 4rem;
+    }
+
+    #hero .container {
+        margin-top: 6rem;
+        display: block;
+    }
+
+    
+    .hero-right-text .subheader {
+        font-size: calc(var(--fs-m-subheader) - 3px);
+    }    
+
+    .hero-left-text {
+        margin-bottom: 2rem;
+    }
+
+    /* .hero-bg {
+        bottom: 0;
+    } */
+}
+
+@media (max-height: 750px) {
+    #hero .container {
+        margin-top: 4rem;
+    }
+
+    .hero-flex {
+        gap: 2.2rem;
+    }
+
+    #hero p {
+        line-height: 1.4;
+    }
+
+    #hero .hero-flex ul li {
+        margin-bottom: 10px;
+    }
+
+    #hero .hero-flex ul li img {
+        width: 25px;
+        height: auto;
+    }
+
+    .hero-left-text li a {
+        font-size: 15px;
     }
 }
   /* HERO END */
@@ -433,7 +501,7 @@ button:hover {
 /* top */
 #about .top {
     position: relative;
-    padding-top: 5rem;
+    padding-top: 3rem;
     margin-bottom: 3rem;
 }
 
@@ -446,17 +514,17 @@ button:hover {
 }
 
 #about .heart-2 {
-    top: 11%;
+    top: 4%;
 }
 
 #about .heart-3 {
-    top: 25%;
+    top: 18%;
 }
 
 #about .imoji {
     width: 120px;
     height: auto;
-    top: 40%;
+    top: 27%;
 }
 
 #about .img-2 {
