--- a/style.css
+++ b/style.css
@@ -480,10 +480,11 @@ nav ul li a:hover {
 /*======= HERO SECTION =======*/
 #hero {
     height: 100vh;
+    position: relative;
 }
 
 .hero-bg {
-    background-image: linear-gradient(45deg, rgb(0 0 0 / .4), rgb(0 0 0 / .1), rgb(0 0 0 / .4)), url('images/hero-img.png');
+    /* background-image: linear-gradient(45deg, rgb(0 0 0 / .4), rgb(0 0 0 / .1), rgb(0 0 0 / .4)), url('images/hero-img.png'); */
     position: absolute;
     top: 0;
     left: 0;
@@ -647,46 +648,7 @@ nav ul li a:hover {
     }
 }
 
-
-@media (max-width: 450px) {
-    #hero {
-        height: unset;
-        display: block;
-    }
-
-    /* .hero-bg {
-        background-position: unset;
-        height: ;
-    } */
-
-    .hero-flex {
-        gap: 4rem;
-    }
-
-    #hero .container {
-        margin-top: 6rem;
-        display: block;
-    }
-
-    .hero-left-text {
-        margin-bottom: 2rem;
-    }
-
-    /* .hero-bg {
-        bottom: 0;
-    } */
-}
-
-@media (max-width: 400px) {
-    .hero-right-text .subheader {
-        font-size: calc(var(--fs-m-subheader) - 2px);
-    }  
-}
-
-@media (max-height: 750px) {
-    #hero .container {
-        margin-top: 4rem;
-    }
+/* @media (max-height: 750px) {
 
     .hero-flex {
         gap: 2.2rem;
@@ -696,18 +658,46 @@ nav ul li a:hover {
         line-height: 1.4;
     }
 
-    #hero .hero-flex ul li {
-        margin-bottom: 10px;
-    }
 
     #hero .hero-flex ul li img {
         width: 25px;
         height: auto;
     }
 
-    .hero-left-text li a {
-        font-size: 15px;
+} */
+
+@media (max-width: 450px) {
+    #hero {
+        height: unset;
+        /* display: block; */
     }
+
+    #hero .container {
+        padding-top: 4rem;
+        display: block;
+    }
+    
+    .hero-flex {
+        gap: 4rem;
+    }
+
+    #hero .hero-flex ul li {
+        margin-bottom: 12px;
+    }
+
+    .hero-left-text li a {
+        font-size: 1rem;
+    }
+
+    .hero-left-text {
+        margin-bottom: 1.2rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .hero-right-text .subheader {
+        font-size: calc(var(--fs-m-subheader) - 2px);
+    }  
 }
   /* HERO END */
 
