--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ html {
 }
 
 /* this is to take off the underline on the button */
-a{
+a {
     text-decoration: none;
 }
 
@@ -207,10 +207,6 @@ button:hover {
 }
 
 @media (min-width: 992px) {
-    .container {
-        padding-inline: 30px;
-    }
-
     .title {
         font-size: var(--fs-title);
     }
@@ -230,6 +226,53 @@ button:hover {
 /* GENERAL END */
 
 /*====== NAVBAR STYLES STARTS ====== */
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar .navbar-brand {
+    width: 110px;
+    height: auto;
+    padding-block: .5rem;
+}
+
+.collapse {
+    /* display: none; */
+}
+
+.navbar-toggler {
+    width: 30px;
+}
+
+.navbar-collapse {
+    position: fixed;
+    margin-top: 3.5rem;    /* change with js */
+    background: var(--clr-black-header);
+    width: 100%;
+    z-index: 10;
+}
+
+.navbar .nav-item {
+    padding: 1.3rem;
+    border-bottom: 1px solid #A8A8A8;
+}
+
+.nav-item .active {
+    outline: 3px solid var(--clr-white);
+    outline-offset: 10px;
+}
+
+/* .navbar .navbar-nav {
+    display: flex;
+    align-items: center;
+    list-style: none;
+} */
+
+.navbar .nav-item {
+    /* margin-left: ; */
+}
 
 /* BACKDROP STYLING */
 .backdrop {
@@ -442,6 +485,8 @@ nav ul li a:hover {
     align-items: center;
     background: rgba(0, 0, 0, 0.5);
     height: 50px;
+
+    display: none;
   }
 
   /* DESKTOP NAV  */
@@ -970,22 +1015,23 @@ nav ul li a:hover {
         padding-top: 4rem;
     }
 
-    #volunteer .body-header {
-        max-width: 80%;
-        margin: 0 auto;
-    }
-
+    
     #volunteer .apply {
         display: flex;
         gap: 2rem;
     }
-
+    
     #volunteer .apply .top {
         max-width: 40%;
     }
-
+    
     #volunteer .apply .bottom {
         width: 60%;
+    }
+
+    #volunteer .carousel .body-header {
+        max-width: 80%;
+        margin: 0 auto;
     }
 }
 
